small fix to collapsable sections

--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -366,7 +366,7 @@ main {
 	section {
 		border: 4px solid black;
 		margin-bottom: 20px;
-		padding: 8px 15px;
+		padding: 8px 45px 8px 15px;
 		position: relative;
 		.section-title {
 			margin-top: 0;
